# sakura

./: README.md  desktop.ini
core/: README.md  file_utils.cc  http_client.cc  http_multipart_request.cc  http_request.cc  http_response.cc  macros.h  sio_client.cc  sio_client_impl.cc  sio_client_impl.h  sio_packet.cc  sio_packet.h  socket_io.cc  string_utils.cc  string_utils.h  url_utils-inl.h  websocket.cc  websocket.h  websocket_thread_helper.cc  websocket_thread_helper.h
core/android/: file_utils_android.cc  file_utils_android.h  http_client_android.cc  http_client_android.h  jni_helper.cc  jni_helper.h  jni_ref_cache.cc  jni_ref_cache.h  log_android.cc  string_utils_android.h
proj.android/: Android.mk  Application.mk
proj.android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
proj.android/app/src/androidTest/java/com/worktile/sakura/: ExampleInstrumentedTest.java
proj.android/app/src/main/: AndroidManifest.xml
proj.android/app/src/test/java/com/worktile/sakura/: ExampleUnitTest.java
sakura/: README.md  curl_proxy_client.cc  curl_proxy_client.h  file_utils.cc  file_utils.h  http_client.cc  http_client.h  http_client_impl.h  http_multipart_request.cc  http_multipart_request.h  http_proxy_client.h  http_request.cc  http_request.h  http_response.cc  http_response.h  log.h  sakura.h  sio_client.cc  sio_client_impl.cc  sio_client_impl.h  sio_packet.cc  sio_packet.h  socket_io.cc  socket_io.h  string_utils.h  websocket.cc  websocket.h  websocket_thread_helper.cc  websocket_thread_helper.h
unit test/: http_multipart_request_tests.cc
(+100 files in other folders)
